[package]
name = "tilemap"
description = "WASM module for Textyle, a web tilemap editor."
version = "0.1.1"
authors = ["Stefan Devai <stefandevai@posteo.me>"]
edition = "2021"
repository = "https://github.com/stefandevai/tilemap"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook", "wee_alloc"]

[dependencies]
wasm-bindgen = "0.2.82"
js-sys = "0.3.59"
console_error_panic_hook = { version = "0.1.7", optional = true }
wee_alloc = { version = "0.4.5", optional = true }
xmlwriter = "0.1.0"

[dependencies.web-sys]
version = "0.3.59"
features = [
  "console",
]

[dev-dependencies]
wasm-bindgen-test = "0.3.32"

[profile.release]
opt-level = "s"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-mutable-globals"]
